--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
 
-        <title>Atividades extras</title>
+        <title>Math.pow</title>
         <meta charset="utf-8">
 
     </head>
 
     <body>
-
+        <h1>Abrir inspecionar elemento (Ctrl+Shift+i)</h1>
         <script src="javascript.js"> </script>
 
     </body>
